# stellar-disaster-relief-payments

./: Cargo.toml  README.md  package.json  tsconfig.json
examples/: drought-relief.ts  earthquake-response.ts  gold-vault-verification.ts  medical-supply-chain.ts  merchant-onboarding.ts  property-inspection.ts  refugee-camp-payments.ts
sdk/src/: aidClient.ts  beneficiaryClient.ts  custody.ts  custodyMonitoring.ts  index.ts  merchantClient.ts  trackerClient.ts  transferClient.ts  types.ts
src/: aid_registry.rs  anti_fraud.rs  beneficiary_manager.rs  cash_transfer.rs  custody_validator.rs  lib.rs  merchant_network.rs  supply_chain_tracker.rs
ui/src/components/: BeneficiaryRegistration.tsx  EmergencyDeployer.tsx  MerchantMap.tsx  TransferCard.tsx
